@@ -36,6 +36,7 @@
 26. Parse synced lyrics, highlight current line, and scroll view with song.
 27. Mark browse text items, and MAI view, as selectable.
 28. Only offer album sort option if there are albums shown.
+29. Allow showing queue time reamining even if only 1 track.
 
 4.0.4
 -----
